--- a/assets/static/css/style.scss
+++ b/assets/static/css/style.scss
@@ -1,6 +1,6 @@
 @import url("http://fonts.googleapis.com/css?family=Noto+Sans");
 
-$blue: #2462AA;
+$green: #508136;
 
 html, body {
     margin: 0;
@@ -9,11 +9,12 @@ html, body {
 
 body {
     font-family: "Noto Sans", sans-serif;
+    color: darken(#fff, 70%);
 }
 
 header {
-    border-top: .5em solid $blue;
-    color: darken($blue, 10%);
+    color: darken($green, 10%);
+    border-top: .5em solid $green;
     
     h1, .realm {
         display: inline-block;
@@ -25,11 +26,41 @@ header {
     }
 
     .realm {
-        color: desaturate(lighten($blue, 30%), 50%);
+        color: desaturate(lighten($green, 30%), 50%);
     
         &::before {
             content: "/";
             margin-right: 1em;
+        }
+    }
+}
+
+.main {
+    width: 700px;
+    margin: 1em auto;
+}
+
+.list {
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+}
+
+.mirror-list {
+    input[type=checkbox] {
+        margin-right: 1em;
+    }
+
+    li {
+        padding: 1em;
+
+        &:nth-child(even) {
+            background-color: darken(#fff, 2%);
+        }
+
+        &:not(:last-child) {
+            border-bottom: .1em solid darken(#fff, 10%);
         }
     }
 }
