--- a/assets/views/layout.jade
+++ b/assets/views/layout.jade
@@ -1,6 +1,8 @@
 doctype html
 html(lang="en")
     head
+        meta(charset="utf-8")
+
         title no &middot; problem
         link(rel="stylesheet", href="/css/style.css")
     body
