--- a/assets/views/layout.jade
+++ b/assets/views/layout.jade
@@ -16,3 +16,5 @@ html(lang="en")
                 block header
             .main
                 block content
+
+        script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
