--- a/assets/views/layout.jade
+++ b/assets/views/layout.jade
@@ -18,3 +18,6 @@ html(lang="en")
                 block content
 
         script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+        if scripts
+            each script in scripts
+                script(src=script)
